# example-reflex-project

./: README.md  default.nix  example-reflex-project.cabal  release.nix
app/: main.hs
dep/reflex-platform/: github.json
src/: Frontend.hs
